<resources>
    <string name="app_name">Task Hub</string>
    <string name="action_settings">Settings</string>
    <string name="action_refresh">Refresh contacts</string>
    <string name="action_about">About us</string>

    <string name="search_title">Search</string>
    <string name="search_hint">Search by name&#8230;</string>
    <string name="notification_panel">Notifications</string>
    <string name="reg_label">Verify your phone number</string>


    <string name="No_ToDo">There is no tasks to do. enjoy your day :)</string>
    <string name="No_Needs">Your needs list is empty, press + button in "Contacts" to start assigning tasks</string>
    <string name="No_Contacts">No users are using this app in your contact list :(</string>

    <string name="action_logout">Logout</string>
    <string name="msg_enter_mobile">TaskHub will send an SMS message to verify your phone number. Enter your country code and phone number to get started:</string>
    <string name="lbl_name">Name</string>
    <string name="lbl_email">Email</string>
    <string name="lbl_mobile">Mobile</string>
    <string name="lbl_next">SUBMIT</string>
    <string name="msg_sit_back">Sit back &amp; Relax! while we verify your mobile number</string>
    <string name="msg_manual_otp">(Enter the verification code below in case if we fail to detect the SMS automatically)</string>
    <string name="lbl_enter_otp"><font size="14">Enter code here</font></string>
    <string name="lbl_submit">ACTIVATE</string>
    <string name="edit_number_des">Edit your phone number</string>
    <string name="country_plus">+</string>
    <string name="inputMobile_hint"><font size="14">your phone number</font></string>
    <string name="action_deactivate">Deactivate account</string>

    <string name="search">Search</string>
    <string name="edit">Edit</string>

    <string name="hint_name">Full Name</string>
    <string name="hint_email">Email</string>
    <string name="btn_startApp">Enjoy your TaskHub :)</string>
    <string name="err_msg_name">Please enter your full name</string>
    <string name="err_msg_Title">Task title field is required!</string>
    <string name="err_msg_Deadline">Deadline for task is required!</string>
    <string name="err_msg_email">Please enter a valid email address</string>
    <string name="guideLine_text">You are one step away from getting tranquility, please provide your name, email and profile photo below:</string>
    <string name="done">Done</string>
    <string name="pending_tasks">New Tasks:------------------------------------</string>

    <string name="delete">Delete</string>
    <string name="change">change_photo</string>
    <string name="title_activity_assign_task">Assign a task</string>


    <string name="hint_task_title">Task Title</string>
    <string name="hint_task_des">Description</string>
    <string name="hint_deadLine">Dead Line</string>
    <string name="assign_task">Assign Task</string>
    <string name="speech_prompt">Say something&#8230;</string>
    <string name="speech_not_supported">Sorry! Your device doesn\'t support speech input</string>
    <string name="select_attach">Select attachment photo here</string>
    <string name="view_attach">Click here to view photo</string>
    <string name="delete_task">Delete task</string>
    <string name="task_description">Task Description:</string>
    <string name="dead_line">Dead Line:</string>
    <string name="attachment_photo">Attachment Photo:</string>
    <string name="email">email</string>
    <string name="call">call</string>
    <string name="feedback">Feedback</string>
    <string name="give_initial_feedback">Give initial feedback</string>
    <string name="progress_not_yet">Progress: Not Yet</string>
    <string name="update_progress">Update progress</string>
    <string name="NotYet">Not yet</string>


    <string-array name="alarm_sounds">
        <item>"alarm_1"</item>
        <item>"alarm_2"</item>
        <item>"alarm_3"</item>
        <item>"alarm_4"</item>
        <item>"alarm_5"</item>
        <item>"alarm_6"</item>
        <item>"alarm_7"</item>
        <item>"alarm_8"</item>
        <item>"alarm_9"</item>

    </string-array>
</resources>
