<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        app:popupTheme="@style/AppTheme.PopupOverlay" />

    <Button
        android:id="@+id/DeleteButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_margin="8dp"
        android:background="@color/colorPrimary"
        android:text="@string/delete_task"
        android:textAllCaps="false"
        android:textColor="#FFFFFF"
        android:textSize="18sp" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/DeleteButton"
        android:layout_below="@+id/toolbar">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/userImage"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true"
                    android:layout_margin="8dp"
                    tools:ignore="ContentDescription"
                     />

                <TextView
                    android:id="@+id/UserName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignTop="@+id/userImage"
                    android:layout_marginTop="8dp"
                    android:layout_toEndOf="@+id/userImage"
                    android:layout_toRightOf="@+id/userImage"
                    android:ellipsize="end"
                    android:textColor="@color/black"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/TaskTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/UserName"
                    android:layout_marginRight="16dp"
                    android:layout_marginTop="8dp"
                    android:layout_toRightOf="@+id/userImage"
                    android:ellipsize="end"
                    android:textSize="18sp" />


                <ImageView
                    android:id="@+id/priority_photo"
                    android:layout_width="16dp"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    tools:ignore="ContentDescription"
                   />

                <ImageView
                    android:id="@+id/call_receiver"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/TaskTitle"
                    android:layout_marginLeft="8dp"
                    android:layout_marginTop="8dp"
                    android:layout_toRightOf="@+id/userImage"
                    android:contentDescription="@string/call"
                    android:src="@drawable/ic_call_black_24dp" />

                <ImageView
                    android:id="@+id/email_receiver"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/TaskTitle"
                    android:layout_marginLeft="32dp"
                    android:layout_marginTop="8dp"
                    android:layout_toRightOf="@+id/call_receiver"
                    android:contentDescription="@string/email"
                    android:src="@drawable/ic_email_black_24dp" />

            </RelativeLayout>



                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="16dp"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="16dp"
                    android:text="@string/task_description"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/taskDescription"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="16dp"
                    android:text=""
                    android:textColor="@color/black" />




                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"
                    android:text="@string/dead_line" />

                <TextView
                    android:id="@+id/taskDeadLine"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="16dp"
                    android:text=""
                    android:textColor="@color/black" />





                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"
                    android:text="@string/attachment_photo" />

                <ImageView
                    android:id="@+id/attachment_image"
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:layout_margin="8dp"
                    tools:ignore="ContentDescription" />


        </LinearLayout>
    </ScrollView>
</RelativeLayout>