<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        app:popupTheme="@style/AppTheme.PopupOverlay" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/initialButton"
        android:layout_below="@+id/toolbar"
        android:id="@+id/scrollView"
        android:fillViewport="false">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <ImageView
                    tools:ignore="ContentDescription"
                    android:id="@+id/userImage"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true"
                    android:layout_margin="8dp" />

                <TextView
                    android:id="@+id/UserName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignTop="@+id/userImage"
                    android:layout_marginTop="8dp"
                    android:layout_toEndOf="@+id/userImage"
                    android:layout_toRightOf="@+id/userImage"
                    android:ellipsize="end"
                    android:textColor="@color/black"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/TaskTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/UserName"
                    android:layout_marginRight="8dp"
                    android:layout_marginTop="8dp"
                    android:ellipsize="end"
                    android:textSize="18sp"
                    android:layout_toRightOf="@+id/userImage" />

                <ImageView
                    tools:ignore="ContentDescription"
                    android:id="@+id/priority_photo"
                    android:layout_width="16dp"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true" />


            </RelativeLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:text="@string/task_description"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/taskDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:text=""
                android:textColor="@color/black" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:text="@string/dead_line" />

            <TextView
                android:id="@+id/taskDeadLine"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:text=""
                android:textColor="@color/black" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:text="@string/attachment_photo" />

            <ImageView
                tools:ignore="ContentDescription"
                android:id="@+id/attachment_image"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_margin="8dp" />

            <TextView
                android:id="@+id/feedbackText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:layout_marginLeft="16dp"
                android:layout_marginStart="16dp"
                android:text="@string/feedback"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:textStyle="bold" />

            <fr.ganfra.materialspinner.MaterialSpinner
                android:id="@+id/pendingSpinner"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:layout_margin="16dp"
                app:ms_alignLabels="false"
                app:ms_arrowColor="@color/colorAccent"
                app:ms_arrowSize="16dp"
                app:ms_baseColor="@color/colorAccent"
                app:ms_enableErrorLabel="false"
                app:ms_enableFloatingLabel="false"
                app:ms_floatingLabelText="floating label"
                app:ms_highlightColor="@color/colorPrimary"
                app:ms_hintColor="@color/colorPrimary"
                app:ms_multiline="false"
                app:ms_thickness="2dp" />
        </LinearLayout>
    </ScrollView>

    <Button
        android:textAllCaps="false"
        android:id="@+id/initialButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="@color/colorPrimary"
        android:text="@string/give_initial_feedback"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        android:layout_alignParentBottom="true"/>

</RelativeLayout>